--- a/weather/src/app/home/home.page.html
+++ b/weather/src/app/home/home.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-    <ion-toolbar color="primary">
+    <ion-toolbar color="medium">
         <ion-title>
             <h1>MY WEATHER</h1>
         </ion-title>
@@ -10,7 +10,7 @@
 
 
     <ion-searchbar class="center" showCancelButton="focus" color="primary-shade" cancelButtonText="Cancel" [(ngModel)]="city"></ion-searchbar>
-    <ion-button class="search" expand="full" (click)="getData()">Search</ion-button>
+    <ion-button class="search" expand="full" (click)="getData()" color="medium">Search</ion-button>
 
 
 
@@ -19,10 +19,10 @@
         <h1>{{name}}</h1>
         <br>
         <img src="http://openweathermap.org/img/w/{{value?.list[0].weather[0].icon}}.png" class="image">
-        <h2><b>{{value?.list[0].main.temp}}&deg;C</b> </h2>
+        <h2><b>{{value?.list[0].main.temp|number:'1.0-0'}}&deg;</b> </h2>
         <h5><b> {{value?.list[0].dt_txt  | date:'EEEE'}}</b></h5>
 
-        <h5><b> {{value?.list[0].dt}}</b></h5>
+
         <h5><b>{{value?.list[0].weather[0].description}}</b> </h5>
         <h5><b>{{value?.list[0].wind.speed}}</b> </h5>
 
@@ -32,37 +32,36 @@
 
     <table class="table">
         <tr>
-            <th>
-                <img src="http://openweathermap.org/img/w/{{value?.list[0].weather[0].icon}}.png" class="image">
-                <br> {{value?.list[0].main.temp}}&deg;
-                <br> {{value?.list[0].dt_txt | date:'EE'}}
 
-            </th>
 
             <th>
                 <img src="http://openweathermap.org/img/w/{{value?.list[1].weather[0].icon}}.png" class="image">
-                <br>{{value?.list[1].main.temp}}&deg;
-                <br> {{value?.list[1].dt_txt| date:'EE'}}
+                <br>{{value?.list[1].main.temp|number:'1.0-0'}}&deg;
+                <br> {{value?.list[1].dt_txt}}
+                <h5><b> {{value?.list[0].dt_txt  | date:'EE'}}</b></h5>
 
             </th>
             <th>
                 <img src="http://openweathermap.org/img/w/{{value?.list[2].weather[0].icon}}.png" class="image">
-                <br>{{value?.list[2].main.temp}}&deg;
-                <br>{{value?.list[2].dt_txt | date:'EE'}}
+                <br>{{value?.list[2].main.temp|number:'1.0-0'}}&deg;
+                <br>{{value?.list[2].dt_txt }}
+                <h5><b> {{value?.list[0].dt_txt  | date:'EE'}}</b></h5>
 
             </th>
 
             <th>
                 <img src="http://openweathermap.org/img/w/{{value?.list[3].weather[0].icon}}.png" class="image">
-                <br>{{value?.list[3].main.temp}}&deg;
-                <br>{{value?.list[3].dt_txt | date:'EE'}}
+                <br>{{value?.list[3].main.temp|number:'1.0-0'}}&deg;
+                <br>{{value?.list[3].dt_txt }}
+                <h5><b> {{value?.list[0].dt_txt  | date:'EE'}}</b></h5>
 
             </th>
 
             <th>
                 <img src="http://openweathermap.org/img/w/{{value?.list[3].weather[0].icon}}.png" class="image">
-                <br>{{value?.list[4].main.temp}}&deg;
-                <br>{{value?.list[4].dt_txt | date:'EE'}}
+                <br>{{value?.list[4].main.temp|number:'1.0-0'}}&deg;
+                <br>{{value?.list[4].dt_txt }}
+                <h5><b> {{value?.list[0].dt_txt  | date:'EE'}}</b></h5>
 
             </th>
 
