--- a/weather/src/app/home/home.page.scss
+++ b/weather/src/app/home/home.page.scss
@@ -1,5 +1,5 @@
 .body {
-    --background: url("/assets/CITY.jpg") 0 0/100% 100% no-repeat;
+    --background: url("/assets/images.jpg") 0 0/100% 100% no-repeat;
     height: 100%;
 }
 
@@ -22,8 +22,8 @@ h1 {
     bottom: 0%;
     top: 60%;
     position: absolute;
-    left: 5%;
-    right: 5%;
+    left: 0%;
+    right: 0%;
     color: white;
     height: 40%
 }
@@ -41,5 +41,5 @@ th {
 }
 
 th:nth-child(even) {
-    background-color: #45c2f367;
+    background-color: #1e212267;
 }
